# learning-lm-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tiny_stories_demo.py
flake_module/: devshell.nix
model/story/: config.json  generation_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
src/: config.rs  kvcache.rs  main.rs  model.rs  operators.rs  params.rs  tensor.rs
