[project]
authors = [{ name = "Kh05ifr4nD", email = "meandSSH0219@gmail.com" }]
dependencies = []
description = ""
name = "learning-lm-rs"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
transformers = ">=4.49.0,<5"
pytorch = ">=2.6.0,<3"
